# shader-shade

./: .env.example  .gitignore  AGENTS.md  README.md  brainstorm.txt  requirements.txt  vercel.json
backend/: agent.py  app.py  metrics.py  render.py  scoring.py  vision.py
frontend/: app.js  index.html  landing.css  landing.html  landing.js  reference_particle_flow_summary.txt  styles.css
marimo/: fetch_traces.py  marimo-brainstorm.txt  sample_shader.glsl  shader_showcase.py  shaders_gallery.py
marimo/__marimo__/session/: shader_showcase.py.json  shaders_gallery.py.json
marimo/data/: shader_traces.json
notes/: agent_memory_plan.md  glsl_rules_condensed.txt  phase2_implementation_plan.md  phase3_implementation_plan.md  reference_particle_flow_summary.txt  shader_agent_note.txt
shader-widget/: README.md  pyproject.toml
shader-widget/src/shader_widget/: __init__.py  widget.py
