[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shader-widget"
version = "0.1.0"
description = "An anywidget for rendering GLSL fragment shaders in marimo notebooks"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "anywidget>=0.9.0",
    "traitlets>=5.0.0",
]

[project.optional-dependencies]
dev = ["marimo"]

[tool.hatch.build.targets.wheel]
packages = ["src/shader_widget"]
